// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TxStatusCard should render correctly for a escrow funded tx 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#FFFCFA",
      "borderColor": "#F56522",
      "borderRadius": 12,
      "borderWidth": 1,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 12,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 12,
      }
    }
  >
    <View
      style={
        {
          "flexShrink": 1,
          "gap": 4,
        }
      }
    >
      <View
        style={
          {
            "height": 17,
            "justifyContent": "center",
          }
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                [
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 28,
                  },
                  undefined,
                ],
                {
                  "marginBottom": -40,
                  "marginTop": -40,
                },
              ],
              false,
            ]
          }
        >
          escrow funded
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 6,
          }
        }
      >
        <test-file-stub
          fill="#F56522"
          style={
            [
              {
                "height": 17,
                "width": 17,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            {
              "height": 17,
              "justifyContent": "center",
            }
          }
        >
          <Text
            allowFontScaling={false}
            numberOfLines={1}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "color": "#7D675E",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 14,
                      "letterSpacing": 0.14,
                      "lineHeight": 20,
                    },
                    undefined,
                  ],
                  {
                    "marginBottom": -40,
                    "marginTop": -40,
                  },
                ],
                false,
              ]
            }
            suppressHighlighting={true}
          >
            09 / 15 / 22
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "flex-end",
            "height": 40,
            "paddingBottom": 1,
            "paddingTop": 4,
            "width": 141,
          },
          {
            "gap": 6,
          },
        ]
      }
    >
      <View
        style={
          [
            undefined,
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
            {
              "height": 10,
              "width": 130,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "flexShrink": 0,
              },
              {
                "paddingBottom": 2,
                "paddingLeft": 2,
                "paddingRight": 2,
                "paddingTop": 2,
              },
            ]
          }
        >
          <test-file-stub
            fill="#888"
            style={
              [
                {
                  "height": 12,
                  "width": 12,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexBasis": "0%",
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {
                "gap": 2,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexBasis": "0%",
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "flex-end",
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "opacity": 0.1,
                      "textAlign": "right",
                    },
                    [
                      {
                        "fontFamily": "Baloo2-SemiBold",
                        "fontSize": 14,
                        "letterSpacing": 0.14,
                        "lineHeight": 22,
                        "marginBottom": -10,
                        "marginTop": -10,
                      },
                      false,
                    ],
                  ],
                  false,
                ]
              }
            >
              0.00
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "textAlign": "right",
                    },
                    [
                      {
                        "fontFamily": "Baloo2-SemiBold",
                        "fontSize": 14,
                        "letterSpacing": 0.14,
                        "lineHeight": 22,
                        "marginBottom": -10,
                        "marginTop": -10,
                      },
                      false,
                    ],
                  ],
                  false,
                ]
              }
            >
               123 456
            </Text>
          </View>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 14,
                    "letterSpacing": 0.14,
                    "lineHeight": 22,
                    "marginBottom": -10,
                    "marginTop": -10,
                  },
                  false,
                ],
                false,
              ]
            }
          >
            sats
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TxStatusCard should render correctly for a pending buy trade tx 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#FFFCFA",
      "borderColor": "#65A519",
      "borderRadius": 12,
      "borderWidth": 1,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 12,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 12,
      }
    }
  >
    <View
      style={
        {
          "flexShrink": 1,
          "gap": 4,
        }
      }
    >
      <View
        style={
          {
            "height": 17,
            "justifyContent": "center",
          }
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                [
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 28,
                  },
                  undefined,
                ],
                {
                  "marginBottom": -40,
                  "marginTop": -40,
                },
              ],
              false,
            ]
          }
        >
          bought
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 6,
          }
        }
      >
        <test-file-stub
          fill="#65A519"
          style={
            [
              {
                "height": 17,
                "width": 17,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            {
              "height": 17,
              "justifyContent": "center",
            }
          }
        >
          <Text
            allowFontScaling={false}
            numberOfLines={1}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "color": "#7D675E",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 14,
                      "letterSpacing": 0.14,
                      "lineHeight": 20,
                    },
                    undefined,
                  ],
                  {
                    "marginBottom": -40,
                    "marginTop": -40,
                  },
                ],
                false,
              ]
            }
            suppressHighlighting={true}
          >
            09 / 15 / 22
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "flex-end",
            "height": 40,
            "paddingBottom": 1,
            "paddingTop": 4,
            "width": 141,
          },
          {
            "gap": 6,
          },
        ]
      }
    >
      <View
        style={
          [
            undefined,
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
            {
              "height": 10,
              "width": 130,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "flexShrink": 0,
              },
              {
                "paddingBottom": 2,
                "paddingLeft": 2,
                "paddingRight": 2,
                "paddingTop": 2,
              },
            ]
          }
        >
          <test-file-stub
            fill="#888"
            style={
              [
                {
                  "height": 12,
                  "width": 12,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexBasis": "0%",
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {
                "gap": 2,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexBasis": "0%",
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "flex-end",
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "opacity": 0.1,
                      "textAlign": "right",
                    },
                    [
                      {
                        "fontFamily": "Baloo2-SemiBold",
                        "fontSize": 14,
                        "letterSpacing": 0.14,
                        "lineHeight": 22,
                        "marginBottom": -10,
                        "marginTop": -10,
                      },
                      false,
                    ],
                  ],
                  false,
                ]
              }
            >
              0.00
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "textAlign": "right",
                    },
                    [
                      {
                        "fontFamily": "Baloo2-SemiBold",
                        "fontSize": 14,
                        "letterSpacing": 0.14,
                        "lineHeight": 22,
                        "marginBottom": -10,
                        "marginTop": -10,
                      },
                      false,
                    ],
                  ],
                  false,
                ]
              }
            >
               123 456
            </Text>
          </View>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 14,
                    "letterSpacing": 0.14,
                    "lineHeight": 22,
                    "marginBottom": -10,
                    "marginTop": -10,
                  },
                  false,
                ],
                false,
              ]
            }
          >
            sats
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TxStatusCard should render correctly for a pending receive tx 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#FFFCFA",
      "borderColor": "#65A519",
      "borderRadius": 12,
      "borderWidth": 1,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 12,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 12,
      }
    }
  >
    <View
      style={
        {
          "flexShrink": 1,
          "gap": 4,
        }
      }
    >
      <View
        style={
          {
            "height": 17,
            "justifyContent": "center",
          }
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                [
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 28,
                  },
                  undefined,
                ],
                {
                  "marginBottom": -40,
                  "marginTop": -40,
                },
              ],
              false,
            ]
          }
        >
          received
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 6,
          }
        }
      >
        <test-file-stub
          fill="#65A519"
          style={
            [
              {
                "height": 17,
                "width": 17,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            {
              "height": 17,
              "justifyContent": "center",
            }
          }
        >
          <Text
            allowFontScaling={false}
            numberOfLines={1}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "color": "#7D675E",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 14,
                      "letterSpacing": 0.14,
                      "lineHeight": 20,
                    },
                    undefined,
                  ],
                  {
                    "marginBottom": -40,
                    "marginTop": -40,
                  },
                ],
                false,
              ]
            }
            suppressHighlighting={true}
          >
            09 / 15 / 22
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "flex-end",
            "height": 40,
            "paddingBottom": 1,
            "paddingTop": 4,
            "width": 141,
          },
          {
            "gap": 6,
          },
        ]
      }
    >
      <View
        style={
          [
            undefined,
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
            {
              "height": 10,
              "width": 130,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "flexShrink": 0,
              },
              {
                "paddingBottom": 2,
                "paddingLeft": 2,
                "paddingRight": 2,
                "paddingTop": 2,
              },
            ]
          }
        >
          <test-file-stub
            fill="#888"
            style={
              [
                {
                  "height": 12,
                  "width": 12,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexBasis": "0%",
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {
                "gap": 2,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexBasis": "0%",
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "flex-end",
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "opacity": 0.1,
                      "textAlign": "right",
                    },
                    [
                      {
                        "fontFamily": "Baloo2-SemiBold",
                        "fontSize": 14,
                        "letterSpacing": 0.14,
                        "lineHeight": 22,
                        "marginBottom": -10,
                        "marginTop": -10,
                      },
                      false,
                    ],
                  ],
                  false,
                ]
              }
            >
              0.00
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "textAlign": "right",
                    },
                    [
                      {
                        "fontFamily": "Baloo2-SemiBold",
                        "fontSize": 14,
                        "letterSpacing": 0.14,
                        "lineHeight": 22,
                        "marginBottom": -10,
                        "marginTop": -10,
                      },
                      false,
                    ],
                  ],
                  false,
                ]
              }
            >
               123 456
            </Text>
          </View>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 14,
                    "letterSpacing": 0.14,
                    "lineHeight": 22,
                    "marginBottom": -10,
                    "marginTop": -10,
                  },
                  false,
                ],
                false,
              ]
            }
          >
            sats
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TxStatusCard should render correctly for a pending refund tx 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#FFFCFA",
      "borderColor": "#9F8C82",
      "borderRadius": 12,
      "borderWidth": 1,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 12,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 12,
      }
    }
  >
    <View
      style={
        {
          "flexShrink": 1,
          "gap": 4,
        }
      }
    >
      <View
        style={
          {
            "height": 17,
            "justifyContent": "center",
          }
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                [
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 28,
                  },
                  undefined,
                ],
                {
                  "marginBottom": -40,
                  "marginTop": -40,
                },
              ],
              false,
            ]
          }
        >
          refund
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 6,
          }
        }
      >
        <test-file-stub
          fill="#9F8C82"
          style={
            [
              {
                "height": 17,
                "width": 17,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            {
              "height": 17,
              "justifyContent": "center",
            }
          }
        >
          <Text
            allowFontScaling={false}
            numberOfLines={1}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "color": "#7D675E",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 14,
                      "letterSpacing": 0.14,
                      "lineHeight": 20,
                    },
                    undefined,
                  ],
                  {
                    "marginBottom": -40,
                    "marginTop": -40,
                  },
                ],
                false,
              ]
            }
            suppressHighlighting={true}
          >
            09 / 15 / 22
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "flex-end",
            "height": 40,
            "paddingBottom": 1,
            "paddingTop": 4,
            "width": 141,
          },
          {
            "gap": 6,
          },
        ]
      }
    >
      <View
        style={
          [
            undefined,
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
            {
              "height": 10,
              "width": 130,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "flexShrink": 0,
              },
              {
                "paddingBottom": 2,
                "paddingLeft": 2,
                "paddingRight": 2,
                "paddingTop": 2,
              },
            ]
          }
        >
          <test-file-stub
            fill="#888"
            style={
              [
                {
                  "height": 12,
                  "width": 12,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexBasis": "0%",
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {
                "gap": 2,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexBasis": "0%",
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "flex-end",
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "opacity": 0.1,
                      "textAlign": "right",
                    },
                    [
                      {
                        "fontFamily": "Baloo2-SemiBold",
                        "fontSize": 14,
                        "letterSpacing": 0.14,
                        "lineHeight": 22,
                        "marginBottom": -10,
                        "marginTop": -10,
                      },
                      false,
                    ],
                  ],
                  false,
                ]
              }
            >
              0.00
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "textAlign": "right",
                    },
                    [
                      {
                        "fontFamily": "Baloo2-SemiBold",
                        "fontSize": 14,
                        "letterSpacing": 0.14,
                        "lineHeight": 22,
                        "marginBottom": -10,
                        "marginTop": -10,
                      },
                      false,
                    ],
                  ],
                  false,
                ]
              }
            >
               123 456
            </Text>
          </View>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 14,
                    "letterSpacing": 0.14,
                    "lineHeight": 22,
                    "marginBottom": -10,
                    "marginTop": -10,
                  },
                  false,
                ],
                false,
              ]
            }
          >
            sats
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TxStatusCard should render correctly for a pending sent tx 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#FFFCFA",
      "borderColor": "#F56522",
      "borderRadius": 12,
      "borderWidth": 1,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 12,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 12,
      }
    }
  >
    <View
      style={
        {
          "flexShrink": 1,
          "gap": 4,
        }
      }
    >
      <View
        style={
          {
            "height": 17,
            "justifyContent": "center",
          }
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                [
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 28,
                  },
                  undefined,
                ],
                {
                  "marginBottom": -40,
                  "marginTop": -40,
                },
              ],
              false,
            ]
          }
        >
          sent
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 6,
          }
        }
      >
        <test-file-stub
          fill="#F56522"
          style={
            [
              {
                "height": 17,
                "width": 17,
              },
              undefined,
            ]
          }
        />
        <View
          style={
            {
              "height": 17,
              "justifyContent": "center",
            }
          }
        >
          <Text
            allowFontScaling={false}
            numberOfLines={1}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "color": "#7D675E",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 14,
                      "letterSpacing": 0.14,
                      "lineHeight": 20,
                    },
                    undefined,
                  ],
                  {
                    "marginBottom": -40,
                    "marginTop": -40,
                  },
                ],
                false,
              ]
            }
            suppressHighlighting={true}
          >
            09 / 15 / 22
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "flex-end",
            "height": 40,
            "paddingBottom": 1,
            "paddingTop": 4,
            "width": 141,
          },
          {
            "gap": 6,
          },
        ]
      }
    >
      <View
        style={
          [
            undefined,
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
            {
              "height": 10,
              "width": 130,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "flexShrink": 0,
              },
              {
                "paddingBottom": 2,
                "paddingLeft": 2,
                "paddingRight": 2,
                "paddingTop": 2,
              },
            ]
          }
        >
          <test-file-stub
            fill="#888"
            style={
              [
                {
                  "height": 12,
                  "width": 12,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexBasis": "0%",
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {
                "gap": 2,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexBasis": "0%",
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "flex-end",
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "opacity": 0.1,
                      "textAlign": "right",
                    },
                    [
                      {
                        "fontFamily": "Baloo2-SemiBold",
                        "fontSize": 14,
                        "letterSpacing": 0.14,
                        "lineHeight": 22,
                        "marginBottom": -10,
                        "marginTop": -10,
                      },
                      false,
                    ],
                  ],
                  false,
                ]
              }
            >
              0.00
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "textAlign": "right",
                    },
                    [
                      {
                        "fontFamily": "Baloo2-SemiBold",
                        "fontSize": 14,
                        "letterSpacing": 0.14,
                        "lineHeight": 22,
                        "marginBottom": -10,
                        "marginTop": -10,
                      },
                      false,
                    ],
                  ],
                  false,
                ]
              }
            >
               123 456
            </Text>
          </View>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 14,
                    "letterSpacing": 0.14,
                    "lineHeight": 22,
                    "marginBottom": -10,
                    "marginTop": -10,
                  },
                  false,
                ],
                false,
              ]
            }
          >
            sats
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
